# vulcan-soa-connection-app

./: .gitignore  README.md  Taskfile.yml
backend/: .env.connectathon.example  .env.local.example  pyproject.toml
backend/fixtures/: patient_demo.json  practitioner_site_coordinator.json  research_study_lzzt_usdm.json  research_study_uc1.json
backend/scripts/: load_fixtures.py  validate_protocol.py
backend/src/vulcan_soa/: activity_flow.py  auth.py  cache.py  config.py  enrollment.py  fhir_client.py  scheduling.py  store.py  tracking.py
backend/src/vulcan_soa/api/: app.py  cache.py  context.py  deps.py  launch.py  models.py  patients.py  research_studies.py  research_subjects.py
backend/src/vulcan_soa/soa_engine/: conditions.py  graph.py
backend/tests/: test_activity_flow_appointments.py  test_activity_flow_chains.py  test_activity_flow_events.py  test_activity_flow_expedite.py  test_activity_flow_requests.py  test_auth.py  test_cache.py  test_config.py  test_cpg_flow_integration.py  test_enrollment.py  test_fhir_client.py  test_golden_path_integration.py  test_load_fixtures.py  test_scheduling.py  test_smoke.py  test_store.py  test_tracking.py  test_validate_protocol.py
backend/tests/api/: test_cache.py  test_context.py  test_deps.py  test_launch.py  test_research_studies.py  test_research_subjects.py
backend/tests/fixtures/: plan_definition_uc1.json
backend/tests/soa_engine/: test_conditions.py  test_graph.py
docker/: docker-compose.yml
docs/: smart-on-fhir-setup.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  (+1 more)
(+49 files in other folders)
