[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vulcan-soa"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "pydantic-settings>=2.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vulcan_soa"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
